--- a/mobile.css
+++ b/mobile.css
@@ -17,6 +17,12 @@ body {
 
 .filter {
     width: 50%;
+    background-color: #d3d3d3;
+}
+
+.filterName {
+    text-align: center;
+    padding: 5px 0;
 }
 
 .filterButton {
@@ -26,6 +32,17 @@ body {
     justify-content: center;
 }
 
+
+
+button {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    border: solid 1px #b4b4b4;
+    color: black;
+}
+
+
 .droppy {
     margin: 0 auto;
     height: 50px;
@@ -34,7 +51,7 @@ body {
     display: flex;
     justify-content: center;
     text-align: center;
-    border-radius: none;
+    border-radius: 0;
     color: black;
 }
 
@@ -87,9 +104,4 @@ body {
 
 .location {
     display: none;
-}
-
-button {
-    width: 50px;
-    height: 50px
 }
