--- a/mobile.css
+++ b/mobile.css
@@ -58,12 +58,17 @@ button {
     display: flex;
     font-size: 0.8rem;
     padding: 4px 10px;
+    background-color: #f2f2f2;
+    border-bottom: solid 1px #ededed;
+    //opacity: .5;
+    //transform: translateY(30px);
+    //transition: 1s;
 }
 
 .headRow {
     position: sticky;
     top: 0;
-    background-color: #e8e8e8;
+    background-color: #ebebeb;
     padding: 10px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.14);
     margin-bottom: 10px;
@@ -89,11 +94,11 @@ button {
 }
 
 .laenge {
-    width: 14%;
+    width: 11%;
 }
 
 .head {
-    width: 25%;
+    width: 28%;
 }
 
 .tool {
@@ -106,4 +111,9 @@ button {
 
 .location {
     display: none;
+}
+
+.rowAppear {
+    opacity: 1;
+    transform: translateY(0);
 }
