--- a/mobile.css
+++ b/mobile.css
@@ -3,6 +3,11 @@
     padding: 0;
     margin: 0;
     font-family: arial;
+    font-size: .8rem;
+}
+
+#post {
+    margin-bottom: 89px;
 }
 
 .filterTab {
